tests/NormalTests/paczka1/fuzzy1/84106096.err
Error in line 3: LCG9cayKb A733 40,9
Error in line 17: ZJzyLLp4o9 A733 58,37
Error in line 20: hT7fYCrL9b A58 52,9
Error in line 24: q5c A58 41,9
Error in line 28: ZJzyLLp4o9 A733 247,7
Error in line 30: ZJzyLLp4o9 A128 51,8
Error in line 33: GK0zRlbpWD5 A58 84,5
Error in line 26: q5c S511 81,7
